--- a/index.html
+++ b/index.html
@@ -44,23 +44,7 @@
               </div>
               <div class="header-titles">
                 <h2>Saurabh Bansal</h2>
-                <h4>
-                  <div class="owl-carousel text-rotation">
-
-                    <div class="item">
-                      <div class="sp-subtitle">Technical Consultant (IIoT)</div>
-                    </div>
-
-                    <div class="item">
-                      <div class="sp-subtitle">Full Stack Developer</div>
-                    </div>
-                  
-                    <div class="item">
-                      <div class="sp-subtitle">Cloud Engineer</div>
-                    </div>
-                    
-                  </div>
-                </h4>
+                <h4> Technical Consultant (IIoT) / Full Stack Developer / Cloud Engineer</h4>
               </div>
             </div>
 
@@ -78,19 +62,19 @@
                 </a>
               </li>
               <li>
-                <a href="#portfolio" class="nav-anim">
+                <a href="#" class="nav-anim">
                   <span class="menu-icon lnr lnr-briefcase"></span>
                   <span class="link-text">Portfolio</span>
                 </a>
               </li>
               <li>
-                <a href="#blog" class="nav-anim">
+                <a href="#" class="nav-anim">
                   <span class="menu-icon lnr lnr-book"></span>
                   <span class="link-text">Blog</span>
                 </a>
               </li>
               <li>
-                <a href="#contact" class="nav-anim">
+                <a href="#" class="nav-anim">
                   <span class="menu-icon lnr lnr-envelope"></span>
                   <span class="link-text">Contact</span>
                 </a>
@@ -110,7 +94,7 @@
               <a href="#" target="_blank" class="btn btn-primary">Download CV</a>
             </div>
 
-            <div class="copyrights">© 2020 All rights reserved.</div>
+            <div class="copyrights">© 2021 All rights reserved.</div>
           </header>
 
           <!-- Mobile Navigation -->
@@ -141,7 +125,10 @@
                   <!-- Personal Information -->
                   <div class="row">
                     <div class="col-xs-12 col-sm-7">
-                      <p>Proin volutpat mauris ac pellentesque pharetra. Suspendisse congue elit vel odio suscipit, sit amet tempor nisl imperdiet. Quisque ex justo, faucibus ut mi in, condimentum finibus dolor. Aliquam vitae hendrerit dolor, eget imperdiet mauris. Maecenas et ante id ipsum condimentum dictum et vel massa. Ut in imperdiet dolor, vel consectetur dui.</p>
+                      <p>Experienced Technical Consultant with a demonstrated history of working in the information technology and services
+                      industry. Skilled in the deployment of traditional as well as modern software solutions on a wide variety of
+                      infrastructure. Freelance developer with a solid understanding of full software development life cycle and modernization
+                      of legacy applications.</p>
                     </div>
 
                     <div class="col-xs-12 col-sm-5">
@@ -153,24 +140,23 @@
                           </li>
 
                           <li>
-                            <span class="title">Age</span>
+                            <span class="title">Age:</span>
                             <span class="value">30</span>
                           </li>
 
+                          <li>
+                            <span class="title">City:</span>
+                            <span class="value">Nottingham</span>
+                          </li>
 
                           <li>
-                            <span class="title">Country</span>
+                            <span class="title">Country:</span>
                             <span class="value">United Kingdom</span>
                           </li>
 
                           <li>
-                            <span class="title">E-mail</span>
+                            <span class="title">E-mail:</span>
                             <span class="value">saurabh.uk18@gmail.com</span>
-                          </li>
-
-                          <li>
-                            <span class="title">Phone</span>
-                            <span class="value">+0123 123 456 789</span>
                           </li>
                         </ul>
                       </div>
@@ -195,18 +181,18 @@
                         <div class="info-list-w-icon">
                           <div class="info-block-w-icon">
                             <div class="ci-icon">
-                              <i class="lnr lnr-store"></i>
+                              <i class="lnr lnr-briefcase"></i>
                             </div>
                             <div class="ci-text">
-                              <h4>Ecommerce</h4>
+                              <h4>Consulting</h4>
                               <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit amet ultricies ex lectus scelerisque nibh. Ut non sodales.</p>
                             </div>
                           </div>
                           <div class="info-block-w-icon">
                             <div class="ci-icon">
-                              <i class="lnr lnr-laptop-phone"></i>
+                              <i class="lnr lnr-cloud"></i>
                             </div><div class="ci-text">
-                              <h4>Web Design</h4>
+                              <h4>Cloud Operations</h4>
                               <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit amet ultricies ex lectus scelerisque nibh. Ut non sodales.</p>
                             </div>
                           </div>
@@ -219,10 +205,10 @@
                         <div class="info-list-w-icon">
                           <div class="info-block-w-icon">
                             <div class="ci-icon">
-                              <i class="lnr lnr-pencil"></i>
+                              <i class="lnr lnr-code"></i>
                             </div>
                             <div class="ci-text">
-                              <h4>Copywriting</h4>
+                              <h4>Full-Stack Development</h4>
                               <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit amet ultricies ex lectus scelerisque nibh. Ut non sodales.</p>
                             </div>
                           </div>
@@ -230,7 +216,7 @@
                             <div class="ci-icon">
                               <i class="lnr lnr-flag"></i>
                             </div><div class="ci-text">
-                              <h4>Management</h4>
+                              <h4>DevOps CI/CD</h4>
                               <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit amet ultricies ex lectus scelerisque nibh. Ut non sodales.</p>
                             </div>
                           </div>
@@ -505,24 +491,24 @@
                       <div class="timeline timeline-second-style clearfix">
                         <div class="timeline-item clearfix">
                           <div class="left-part">
-                            <h5 class="item-period">2008</h5>
-                            <span class="item-company">University of Studies</span>
+                            <h5 class="item-period">2018 - 2020</h5>
+                            <span class="item-company">Nottingham Trent University</span>
                           </div>
                           <div class="divider"></div>
                           <div class="right-part">
-                            <h4 class="item-title">Frontend Development</h4>
+                            <h4 class="item-title">MSc Cloud & Enterprise Computing</h4>
                             <p>Maecenas finibus nec sem ut imperdiet. Ut tincidunt est ac dolor aliquam sodales. Phasellus sed mauris hendrerit, laoreet sem in, lobortis ante.</p>
                           </div>
                         </div>
 
                         <div class="timeline-item clearfix">
                           <div class="left-part">
-                            <h5 class="item-period">2007</h5>
-                            <span class="item-company">University of Studies</span>
+                            <h5 class="item-period">2019 - 2020</h5>
+                            <span class="item-company">Nottingham Trent University</span>
                           </div>
                           <div class="divider"></div>
                           <div class="right-part">
-                            <h4 class="item-title">Graphic Design</h4>
+                            <h4 class="item-title">Diploma in Professional Practice</h4>
                             <p>Aliquam tincidunt malesuada tortor vitae iaculis. In eu turpis iaculis, feugiat risus quis, aliquet urna. Quisque fringilla mollis risus, eu pulvinar dolor.</p>
                           </div>
                         </div>
@@ -537,12 +523,12 @@
                       <div class="timeline timeline-second-style clearfix">
                         <div class="timeline-item clearfix">
                           <div class="left-part">
-                            <h5 class="item-period">2016 - Current</h5>
-                            <span class="item-company">Google</span>
+                            <h5 class="item-period">2019 - Current</h5>
+                            <span class="item-company">Forcam UK Ltd.</span>
                           </div>
                           <div class="divider"></div>
                           <div class="right-part">
-                            <h4 class="item-title">Lead Ui/Ux Designer</h4>
+                            <h4 class="item-title">Technical Consultant (IIoT / Edge/ SaaS)</h4>
                             <p>Praesent dignissim sollicitudin justo, sed elementum quam lacinia quis. Phasellus eleifend tristique posuere. Sed vitae dui nec magna.</p>
                           </div>
                         </div>
