Update About Me section

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                       infrastructure. Nottingham Trent University Alumnus with a Masters in Cloud Computing.</p>
                       
                       <p>Freelance Developer with a solid understanding of full software development life cycle and modernization
-                        of legacy applications. Skilled in Web Development, Android, Java, and Software as a Service (SaaS) solutions.</p>
+                        of legacy applications.</p>
                     </div>
 
                     <div class="col-xs-12 col-sm-5">
