--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="nav-anim">
+                <a href="#contact" class="nav-anim">
                   <span class="menu-icon lnr lnr-envelope"></span>
                   <span class="link-text">Contact</span>
                 </a>
@@ -91,7 +91,7 @@
             </div>
 
             <div class="header-buttons">
-              <a href="#" target="_blank" class="btn btn-primary">Download CV</a>
+              <a href="img/resume/cv-saurabh-bansal.pdf" target="_blank" class="btn btn-primary">Download CV</a>
             </div>
 
             <div class="copyrights">© 2021 All rights reserved.</div>
@@ -187,7 +187,7 @@
                             </div>
                             <div class="ci-text">
                               <h4>Consulting</h4>
-                              <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit amet ultricies ex lectus scelerisque nibh. Ut non sodales.</p>
+                              <p>Technical consulting for enterprise software implementation, deploying cloud native architecture, pre-sales support and corporate trainings.</p>
                             </div>
                           </div>
                           <div class="info-block-w-icon">
@@ -195,7 +195,7 @@
                               <i class="lnr lnr-cloud"></i>
                             </div><div class="ci-text">
                               <h4>Cloud Operations</h4>
-                              <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit amet ultricies ex lectus scelerisque nibh. Ut non sodales.</p>
+                              <p>Provisioning and management of a multitude of cloud services from providers including AWS, Azure and GCP. Focused on Jamstack, Serverless and Edge computing use cases.</p>
                             </div>
                           </div>
                         </div>
@@ -211,7 +211,7 @@
                             </div>
                             <div class="ci-text">
                               <h4>Full-Stack Development</h4>
-                              <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit amet ultricies ex lectus scelerisque nibh. Ut non sodales.</p>
+                              <p>Front-end development with UI tools/libraries including Bootstrap, React, Vue and Flutter. Back-end development with JavaScript, PHP and Java with SQL and NoSQL data sources.</p>
                             </div>
                           </div>
                           <div class="info-block-w-icon">
@@ -219,89 +219,14 @@
                               <i class="lnr lnr-flag"></i>
                             </div><div class="ci-text">
                               <h4>DevOps CI/CD</h4>
-                              <p>Pellentesque pellentesque, ipsum sit amet auctor accumsan, odio tortor bibendum massa, sit amet ultricies ex lectus scelerisque nibh. Ut non sodales.</p>
+                              <p>Planning work and collaboration on code development. Creating pipelines for complex build and deploy processes. Automated and manual test cases for continuous testing.</p>
                             </div>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                  <!-- End of Services -->
-
-                  <div class="white-space-30"></div>
-
-                  <!-- Testimonials -->
-                  <div class="row">
-                    <div class="col-xs-12 col-sm-12">
-                      <div class="block-title">
-                        <h3>Testimonials</h3>
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-xs-12 col-sm-12">
-                      <div class="testimonials owl-carousel">
-                        <!-- Testimonial 1 -->
-                        <div class="testimonial">
-                          <div class="img">
-                            <img src="img/testimonials/testimonial-1.jpg" alt="Saurabh Bansal">
-                          </div>
-                          <div class="text">
-                            <p>Vivamus at molestie dui, eu ornare orci. Curabitur vel egestas dolor. Nulla condimentum nunc sit amet urna tempus finibus. Duis mollis leo id ligula pellentesque, at vehicula dui ultrices.</p>
-                          </div>
-
-                          <div class="author-info">
-                            <h4 class="author">Julia Hickman</h4>
-                            <h5 class="company">Omni Source</h5>
-                            <div class="icon">
-                              <i class="fas fa-quote-right"></i>
-                            </div>
-                          </div>
-                        </div>
-                        <!-- End of Testimonial 1 -->
-
-                        <!-- Testimonial 2 -->
-                        <div class="testimonial">
-                          <div class="img">
-                            <img src="img/testimonials/testimonial-2.jpg" alt="Saurabh Bansal">
-                          </div>
-                          <div class="text">
-                            <p>Vivamus at molestie dui, eu ornare orci. Curabitur vel egestas dolor. Nulla condimentum nunc sit amet urna tempus finibus. Duis mollis leo id ligula pellentesque, at vehicula dui ultrices.</p>
-                          </div>
-
-                          <div class="author-info">
-                            <h4 class="author">Robert Watkins</h4>
-                            <h5 class="company">Endicott Shoes</h5>
-                            <div class="icon">
-                              <i class="fas fa-quote-right"></i>
-                            </div>
-                          </div>
-                        </div>
-                        <!-- End of Testimonial 2 -->
-
-                        <!-- Testimonial 3 -->
-                        <div class="testimonial">
-                          <div class="img">
-                            <img src="img/testimonials/testimonial-3.jpg" alt="Saurabh Bansal">
-                          </div>
-                          <div class="text">
-                            <p>Vivamus at molestie dui, eu ornare orci. Curabitur vel egestas dolor. Nulla condimentum nunc sit amet urna tempus finibus. Duis mollis leo id ligula pellentesque, at vehicula dui ultrices.</p>
-                          </div>
-
-                          <div class="author-info">
-                            <h4 class="author">Kristin Carroll</h4>
-                            <h5 class="company">Helping Hand</h5>
-                            <div class="icon">
-                              <i class="fas fa-quote-right"></i>
-                            </div>
-                          </div>
-                        </div>
-                        <!-- End of Testimonial 3 -->
-                      </div>
-                    </div>
-                  </div>
-                  <!-- End of Testimonials -->
+                  <!-- End of Services -->                  
 
                   <div class="white-space-50"></div>
 
@@ -454,9 +379,7 @@
                           <div class="divider"></div>
                           <div class="right-part">
                             <h4 class="item-title">Technical Consultant (IIoT / Edge / SaaS)</h4>
-                            <p>Consulting with the technical implemen</p>
-                            <p>Implementation and configuration of the software product FORCAM FORCE along with creation of technical architecture and global template documents. In</p>
-                            <p>Technical Consultant dignissim sollicitudin justo, sed elementum quam lacinia quis. Phasellus eleifend tristique posuere. Sed vitae dui nec magna.</p>
+                            <p>Implementation and configuration of the software product FORCAM FORCE along with the creation of technical architecture and global template documents. Integration of third-party systems and second level support.<p>
                           </div>
                         </div>
 
@@ -468,7 +391,7 @@
                           <div class="divider"></div>
                           <div class="right-part">
                             <h4 class="item-title">Android/Web Developer</h4>
-                            <p>Maecenas tempus faucibus rutrum. Duis eu aliquam urna. Proin vitae nulla tristique, ornare felis id, congue libero. Nam volutpat euismod quam.</p>
+                            <p>Mobile application development with Native Android SDK, Flutter and React Native. Full-stack web development with Node.js, PHP and Java.</p>
                           </div>
                         </div>
                         
@@ -480,8 +403,7 @@
                           <div class="divider"></div>
                           <div class="right-part">
                             <h4 class="item-title">PHP Programmer</h4>
-                            <p>Back-end development </p>
-                            <p>Duis mollis nunc quis quam viverra venenatis. Nulla nulla arcu, congue vitae nunc ac, sodales ultricies diam. Nullam justo leo, tincidunt sit amet.</p>
+                            <p>Back-end development with core PHP and frameworks including CakePHP, CodeIgniter and Symfony. Custom development for WordPress and Joomla.</p>
                           </div>
                         </div>
                       </div>
@@ -641,7 +563,7 @@
                     <div class="col-xs-12 col-sm-6">
                       <div class="certificate-item clearfix">
                         <div class="certi-logo">
-                          <img src="img/certifications/" alt="logo">
+                          <img src="img/certifications/ibm-logo.png" alt="logo">
                         </div>
                         
                         <div class="certi-content">
@@ -922,21 +844,14 @@
                     <div class="col-xs-12 col-sm-4">
                       <div class="lm-info-block gray-default">
                         <i class="lnr lnr-map-marker"></i>
-                        <h4>San Francisco</h4>
-                        <span class="lm-info-block-value"></span>
-                        <span class="lm-info-block-text"></span>
-                      </div>
-
-                      <div class="lm-info-block gray-default">
-                        <i class="lnr lnr-phone-handset"></i>
-                        <h4>415-832-2000</h4>
+                        <h4>United Kingdom</h4>
                         <span class="lm-info-block-value"></span>
                         <span class="lm-info-block-text"></span>
                       </div>
 
                       <div class="lm-info-block gray-default">
                         <i class="lnr lnr-envelope"></i>
-                        <h4>alex@example.com</h4>
+                        <h4>saurabh.uk18@gmail.com</h4>
                         <span class="lm-info-block-value"></span>
                         <span class="lm-info-block-text"></span>
                       </div>
@@ -954,7 +869,6 @@
 
                     <!-- Contact Form -->
                     <div class="col-xs-12 col-sm-8">
-                      <div id="map" class="map"></div>
                       <div class="block-title">
                         <h3>How Can I <span>Help You?</span></h3>
                       </div>
