--- a/index.html
+++ b/index.html
@@ -993,7 +993,7 @@
                             </div>
                           </div>
 
-                          <div class="g-recaptcha" data-sitekey="6Lc7500eAAAAAFgZHgHPl73is2eQdDMVMLDaXfK0" data-theme="light"></div>
+                          <div class="g-recaptcha" data-sitekey="6Lc7500eAAAAAFgZHgHPl73is2eQdDMVMLDaXfK0"></div>
       
                           <input type="submit" class="button btn-send" value="Send message">
                         </div>
