Update form action

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
                           <li>
                             <span class="title">E-mail:</span>
-                            <span class="value">mail@saurabhbansal.me</span>
+                            <span class="value">reach@saurabhbansal.me</span>
                           </li>
                         </ul>
                       </div>
@@ -933,7 +933,7 @@
 
                       <div class="lm-info-block gray-default">
                         <i class="lnr lnr-envelope"></i>
-                        <h4>mail@saurabhbansal.me</h4>
+                        <h4>reach@saurabhbansal.me</h4>
                         <span class="lm-info-block-value"></span>
                         <span class="lm-info-block-text"></span>
                       </div>
@@ -955,7 +955,7 @@
                         <h3>How Can I <span>Help You?</span></h3>
                       </div>
 
-                      <form id="contact_form" class="contact-form" action="contact_form/contact_form.php" method="post">
+                      <form id="contact_form" class="contact-form" action="https://formsubmit.co/reach@saurabhbansal.me" method="post">
 
                         <div class="messages"></div>
 
