--- a/index.html
+++ b/index.html
@@ -993,9 +993,8 @@
                             </div>
                           </div>
 
-                          <div class="g-recaptcha" data-sitekey="6Lc7500eAAAAAFgZHgHPl73is2eQdDMVMLDaXfK0"></div>
       
-                          <input type="submit" class="button btn-send" value="Send message">
+                          <button type="submit" class="button btn-send" value="Send message">Send message</button>
                         </div>
                       </form>
                     </div>
