Update contact form

--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
                         <h3>How Can I <span>Help You?</span></h3>
                       </div>
 
-                      <form id="contact_form" class="contact-form" action="https://formsubmit.co/reach@saurabhbansal.me" method="post">
+                      <form class="contact-form" action="https://formsubmit.co/reach@saurabhbansal.me" method="post">
 
                         <div class="messages"></div>
 
@@ -993,8 +993,9 @@
                             </div>
                           </div>
 
+                          <div class="g-recaptcha" data-sitekey="6Lc7500eAAAAAFgZHgHPl73is2eQdDMVMLDaXfK0"></div>
       
-                          <button type="submit" class="button btn-send" value="Send message">Send message</button>
+                          <button type="submit" class="button btn-send">Send message</button>
                         </div>
                       </form>
                     </div>
