--- a/index.html
+++ b/index.html
@@ -955,7 +955,7 @@
                         <h3>How Can I <span>Help You?</span></h3>
                       </div>
 
-                      <form class="contact-form" action="https://formsubmit.co/reach@saurabhbansal.me" method="post">
+                      <form class="contact-form" action="https://formsubmit.co/e54c8cf5e778fe77a06df59ec8f0c6ed" method="post">
 
                         <div class="messages"></div>
 
@@ -1023,9 +1023,6 @@
     <script src='js/masonry.pkgd.min.js'></script>
     <script src='js/owl.carousel.min.js'></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
-
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrDf32aQTCVENBhFJbMBKOUTiUAABtC2o"></script>
-    <script src="js/jquery.googlemap.js"></script>
     <script src="js/validator.js"></script>
     <script src="js/main.js"></script>
   </body>
