Remove inline reCAPTCHA

--- a/index.html
+++ b/index.html
@@ -992,8 +992,6 @@
                               </div>
                             </div>
                           </div>
-
-                          <div class="g-recaptcha" data-sitekey="6Lc7500eAAAAAFgZHgHPl73is2eQdDMVMLDaXfK0"></div>
       
                           <button type="submit" class="button btn-send">Send message</button>
                         </div>
@@ -1023,6 +1021,9 @@
     <script src='js/masonry.pkgd.min.js'></script>
     <script src='js/owl.carousel.min.js'></script>
     <script src="js/jquery.magnific-popup.min.js"></script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCrDf32aQTCVENBhFJbMBKOUTiUAABtC2o"></script>
+    <script src="js/jquery.googlemap.js"></script>
     <script src="js/validator.js"></script>
     <script src="js/main.js"></script>
   </body>
